--- a/day9/day9.css
+++ b/day9/day9.css
@@ -13,6 +13,7 @@ body{
     color: white;
     
 }
+
 .score{
     margin-top: 30px;
 }
@@ -31,5 +32,8 @@ body{
     
 }
 .seats:hover{
-    background-color: rgba(255, 68, 0, 0.623);
+    opacity: 0.8;
+}
+.after{
+    background-color: rgb(238, 72, 12);
 }
