--- a/day9/day9.css
+++ b/day9/day9.css
@@ -2,8 +2,11 @@
     margin: 0;
     padding: 0;
 }
-body{
+.body{
     background-color: orangered;
+}
+.body1{
+    background-color:rgb(87, 87, 219);
 }
 .nav{
     display: flex ;
@@ -22,6 +25,7 @@ body{
     background-color: black;
     grid-template-columns: auto auto auto auto auto auto;
     grid-template-rows: auto auto auto auto auto auto;
+    overflow: hidden;
     
 }
 .seats{
@@ -31,9 +35,47 @@ body{
     background-color: rgba(255, 153, 0, 0.932);
     
 }
+.seats2{
+    background-color: dodgerblue;
+}
 .seats:hover{
     opacity: 0.8;
 }
 .after{
     background-color: rgb(238, 72, 12);
+}
+.after1{
+    background-color: rgba(8, 75, 141, 0.925);
+}
+.theme{
+    position: relative;
+    margin: 30px;
+}
+input[type="checkbox"]{
+    position: absolute;
+    height: 30px;
+    width: 80px;
+    -webkit-appearance: none;
+    background-color: gray;
+    outline: none;
+    box-shadow:inset 0 0 5px black;
+    border-radius: 30px;
+}
+input:checked[type="checkbox"]{
+    background-color: black;
+}
+input[type="checkbox"]:before{
+    content: '';
+    position: absolute;
+background-color: #fff;
+height: 30px;
+width: 30px;
+border-radius: 20px;
+top: 0;
+left: 0;
+scale: (1.1);
+transition: .5s;
+}
+input:checked[type="checkbox"]:before{
+  left: 50px;
 }
