--- a/day8/day8.css
+++ b/day8/day8.css
@@ -2,20 +2,20 @@
     display: grid;
     width: 400px;
     height: 400px;
-    background-color: orangered;
+    background-color: black;
     margin: 5% auto;
     overflow: hidden;
     grid-template-columns: repeat(40,auto);
-    grid-template-rows: repeat(40,auto);
+    grid-template-rows: repeat(41,auto);
 }
 .inner{
     margin: 0;
-    padding: 0;
+    padding: 0px;
     /* display: inline-block; */
-    height: 10px;
-    width: 10px;
+    height: 10.8px;
+    width: 10.9px;
     background-color: black;
-    border: .2px solid white;
+    border: .4px solid white;
 }
 .inner:hover{
     opacity: .8;
