--- a/day12/day12.css
+++ b/day12/day12.css
@@ -2,30 +2,24 @@ body{
     background-color: rgb(56, 42, 173);
 }
 .container{
-    position: relative;
-    display: inline-block;
-    min-height: 300px;
-    min-width: 300px;
-    /* background-color: rgb(103, 90, 224); */
-    margin: 10% 35%;
+    height: 300px;
+    width: 400px;
+    background-color: rgb(56, 42, 130);;
+    overflow: auto;
+    margin: 7% auto;
 }
 .heading{
     text-align: center;
     color: white;
 }
 .search-form{
-    position: absolute;
-    left: 20%;
-    background-color: rgb(0, 0, 0,0.2);
+   margin-left: 25%;
 }
-ul{
-    position: absolute;
-    top: 35%;
-}
+
 .todo{
     list-style: none;
     padding: 5px;
-    width: 250%;
+    width: 280px;
     display: flex;
     justify-content: space-between;
     background-color: rgb(0, 0, 0,0.2);
@@ -40,9 +34,12 @@ label{
     color: white;
 }
 .add-form{
-    position: absolute;
     bottom: 10px;
-    left: 20%;
+    margin-left: 25%;
+}
+.add-form h3{
+    margin-right: 200px;
+    margin-bottom: 3px;
 }
 input{
     background-color: rgb(0, 0, 0,0.2);
