--- a/day17/src/App.css
+++ b/day17/src/App.css
@@ -1,19 +1,21 @@
-*{
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
 }
-
-.app{
-
-  width:100vw;
-  height:100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container {
+  display: inline-block;
+  margin: 10% 38%;
 }
-
-h3{
-  margin-block: 2rem;
-  font-size: 2rem;
+.inner {
+  margin-top: 15px;
+  height: 300px;
+  overflow: auto;
+  text-align: center;
+}
+.info {
+  border: 1px solid black;
+  border-radius: 15%;
+  height: 50px;
+  margin: 5px 2px;
+  background-color: green;
 }
